# g_routepy

./: .gitignore  README.md  pyproject.toml
examples/: example1.py  example2.py
g_route/: SKILL.md  __init__.py  astar_router.py  gds_router.py  gds_writer.py  geometry.py  grid_obstacles.py  net_router.py  routing_config.py  routing_grid.py  types.py
