[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "g_route"
version = "0.1.0"
description = "Grid-based Manhattan/via-aware GDS autorouter (KLayout-backed)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Organization" },
]
dependencies = [
    "klayout>=0.29",
    "shapely>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["g_route*"]

[tool.setuptools.package-data]
g_route = ["SKILL.md"]
